# liglicko2

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: update_ratings.rs
liglicko2-research/: Cargo.toml  sample-encounters.csv
research/: .gitignore  Cargo.toml  README.md  combine-reports.py  pgo.sh  report-0192ed18-b356-7042-bf62-bcc9c829c9d7.csv  report-0192ed21-37b8-73f0-a041-6ff5b48e07dc.csv  report-0192ed25-e8f2-71a1-81eb-c67d700f58c3.csv  report-original-rating-regulator-0.02.csv  sample-encounters.csv
research/reports/: deviations.csv  first-advantage.csv  max-deviation-200-290.csv  max-deviation-300-400.csv  time.csv
research/reports/rating-regulator/: original-0.01.csv  restricted-0.02.csv
research/reports/without-regulator/: report-0192ed06-ef40-77f0-a1e9-67223d4d785e.csv
research/src/: encounter.rs  lib.rs  player.rs
src/: instant.rs  internal_rating.rs  lib.rs  rating.rs  rating_system.rs  score.rs
