[package]
name = "liglicko2-fuzz"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.liglicko2]
path = ".."

[[bin]]
name = "update_ratings"
path = "fuzz_targets/update_ratings.rs"
test = false
doc = false
bench = false
