[package]
name = "liglicko2-research"
publish = false
edition = "2021"

[dependencies]
chrono = "0.4.38"
compensated-summation = { git = "https://github.com/niklasf/compensated-summation", branch = "feat/default" }
csv = "1.3.0"
liglicko2 = { path = ".." }
mimalloc = "0.1.43"
ordered-float = "4.4.0"
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_with = "3.11.0"
thiserror = "1.0.65"
