[package]
name = "liglicko2-research"
publish = false
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
compensated-summation = { git = "https://github.com/niklasf/compensated-summation", branch = "feat/default" }
csv = "1.3.0"
glicko2 = { git = "https://github.com/niklasf/glicko2", branch = "feature/convergence-error" }
liglicko2 = { path = ".." }
ordered-float = "4.4.0"
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_with = "3.11.0"
thiserror = "1.0.65"
tikv-jemallocator = "0.6.0"
uuid = { version = "1.11.0", features = ["v7"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
